<resources>
    <string name="app_name">Rewarding App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="app_slogan">Earn money online</string>
    <string name="safe_and_secure">Safe and Secure</string>
    <string name="image">image</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="new_to_rewarding_app">New to Rewarding App ?</string>
    <string name="greeting">Welcome to Rewarding App</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="create_password">Create Password</string>
    <string name="login_greeting">Welcome back to Rewarding App</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_your_account_password">Reset your account password</string>
    <string name="password_reset_instructions">If your entered email address is registered with grocery app we will send you a password reset link on your registered email address</string>
    <string name="send">Send</string>
    <string name="privacy_policy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pretium libero metus, at pellentesque dui condimentum sit amet. Maecenas augue ante, mollis et pharetra nec, ultricies quis sapien. Donec tincidunt diam mauris, vestibulum cursus tortor ornare vitae. Aliquam rutrum, felis a viverra auctor, metus mi pharetra est, quis finibus sapien risus at erat. Morbi nec laoreet nulla, volutpat luctus enim. Nullam sollicitudin magna metus, sit amet faucibus lacus hendrerit vel. Mauris sit amet purus velit. Pellentesque lacus eros, venenatis id lacus egestas, placerat vulputate neque. Morbi ut pulvinar velit, et gravida lectus.</string>
    <string name="about_us">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pretium libero metus, at pellentesque dui condimentum sit amet. Maecenas augue ante, mollis et pharetra nec, ultricies quis sapien. Donec tincidunt diam mauris, vestibulum cursus tortor ornare vitae. Aliquam rutrum, felis a viverra auctor, metus mi pharetra est, quis finibus sapien risus at erat. Morbi nec laoreet nulla, volutpat luctus enim. Nullam sollicitudin magna metus, sit amet faucibus lacus hendrerit vel. Mauris sit amet purus velit. Pellentesque lacus eros, venenatis id lacus egestas, placerat vulputate neque. Morbi ut pulvinar velit, et gravida lectus.</string>
    <string name="credits">Credits</string>
    <string name="freepik_hyperlink">Gift icon by <a href="https://www.freepik.com/">Freepik </a></string>
    <string name="title_about_us">About us</string>
    <string name="withdraw">Withdraw</string>
    <string name="paypal_id">Paypal Id</string>
    <string name="amount">Amount</string>
    <string name="oops_time_out">Oops Time Out</string>
    <string name="retry">Retry</string>
    <string name="logout_warning">Are you sure you want to logout ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="update_details">Update Details</string>
    <string name="support">Support</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="earn_points">Earn Points</string>
    <string name="spin_wheel">Spin Wheel</string>
    <string name="quiz">Quiz</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="check">Check</string>
    <string name="update_name">Update Name</string>
    <string name="update_phone">Update Phone</string>
    <string name="current_password">Current Password</string>
    <string name="support_text">You can mail us your problems and queries regarding the app</string>
    <string name="mail">Mail</string>
    <string name="spin">Spin</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="referral_text">Refer a friend and get 100 points for every referral and your friend gets 50 points</string>
    <string name="my_referrals">My Referrals</string>
    <string name="enter_refer_code">Enter refer Code</string>
    <string name="get_bonus">Get Bonus</string>
    <string name="back_to_home">Back to home</string>
    <string name="right_answers">Right Answers</string>
    <string name="you_scored">You Scored</string>
    <string name="well_played">Well played</string>
    <string name="wrong_answers">Wrong Answers</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="create_user">Create User</string>
    <string name="phone_number">phone number</string>
    <string name="enter_6_digit_code_here">Enter 6 digit code here</string>
    <string name="login_with_phone">Login with phone</string>

</resources>