<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity"
    android:background="@color/primary">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_below="@id/subtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/logo"
        android:contentDescription="@string/image"/>


    <TextView
        android:id="@+id/subtext_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/safe_and_secure"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/shield_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_above="@id/btn_layout"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_toStartOf="@id/subtext_1"
        android:src="@drawable/ic_shield"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/google_login_btn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/google"
            android:contentDescription="@string/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/new_to_rewarding_app"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="@dimen/_45sdp"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login_with_phone" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login"
            app:strokeColor="@color/secondary"
            app:strokeWidth="@dimen/_2sdp" />


    </LinearLayout>

</RelativeLayout>