<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutUsActivity"
    android:background="@color/primary">


    <TextView
        android:id="@+id/title_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_about_us"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:id="@+id/about_us_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_about_us"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/title_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/white"
        android:layout_below="@id/about_us_text"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_18sdp"/>

    <TextView
        android:id="@+id/flaticon_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_credits"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:linksClickable="true"
        android:text="@string/freepik_hyperlink"
        android:textColor="@color/secondary" />


</RelativeLayout>