<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SupportActivity"
    android:background="@color/primary">

    <TextView
        android:id="@+id/text_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="@dimen/_20sdp"/>

    <ImageView
        android:id="@+id/support_icon"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/ic_support"
        app:tint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_support"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/support_icon"
        android:text="@string/support_text"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mail_us_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:layout_below="@id/sub_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/mail"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"/>

</RelativeLayout>