<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_225sdp"
    android:layout_height="@dimen/_200sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/_25sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_logout"
            app:tint="@color/red"
            android:contentDescription="@string/image"/>

        <TextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logout_icon"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/logout_warning"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_logout_btn"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/logout_text"
            android:text="@string/no"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_btn"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/yes"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/red"
            android:textColor="@color/red"
            android:width="1dp"
            android:layout_below="@id/logout_text"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>



    </RelativeLayout>



</com.google.android.material.card.MaterialCardView>