<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateAccountActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/title_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:id="@+id/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_create_account"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/greeting"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_text"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/secondary"
            app:errorEnabled="false"
            app:hintTextColor="@color/secondary"
            app:startIconDrawable="@drawable/ic_user">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/secondary"
            app:errorEnabled="false"
            app:hintTextColor="@color/secondary"
            app:startIconDrawable="@drawable/ic_mail">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_phone_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:hint="@string/phone"
            app:boxStrokeColor="@color/secondary"
            app:errorEnabled="false"
            app:hintTextColor="@color/secondary"
            app:startIconDrawable="@drawable/ic_phone">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_input"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:hint="@string/create_password"
            app:boxStrokeColor="@color/secondary"
            app:endIconMode="password_toggle"
            app:errorEnabled="false"
            app:hintTextColor="@color/secondary"
            app:startIconDrawable="@drawable/ic_password">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="@color/secondary"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/create_account"
                android:visibility="visible"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/secondary"
                android:visibility="gone" />


        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#0277BD"
            android:textSize="@dimen/_8sdp"
            app:strokeWidth="0dp"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>

</RelativeLayout>